--- a/Maquette 2/index.html
+++ b/Maquette 2/index.html
@@ -20,6 +20,7 @@
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/d3607bbb57.js"></script>
+
     <title>Title</title>
 
 </head>
@@ -35,58 +36,62 @@
                     </div>
                 </div>
             </div>
-            <div class="dropdown-divider"></div>
+            <div class="dropdown-divider trait"></div>
             <div class="row">
                 <div class="col-sm-12 background">
                     <div class="text1">
                         <h6><i class="fas fa-home"></i> Accueil </h6>
                     </div>
-                    <div class="text2 padding">
+                    <div class="text2">
 
                         <h6><i class="fas fa-suitcase"></i> collections </h6>
                         <h6><i class="fas fa-user"></i> Propriétaires </h6>
                         <h6><i class="fas fa-globe"></i> Emplacements </h6>
                         <h6><i class="fas fa-tablet-alt"></i> Applications </h6>
-                        <h6><i class="far fa-clone"></i> Contenu génériques</h6>
-                        <div class="dropdown-divider"></div>
+                        <h6><i class="fas fa-clone"></i> Contenu génériques</h6>
 
-                            <h6><i class="fas fa-scroll"></i>Tickets
+                        <div class="dropdown-divider trait"></div>
+
+                        <h6><i class="fas fa-scroll"></i>Ticket
                             <span class="badge badge-danger float-right m-1">9</span></h6>
-                        <h6><i class="fas fa-bell"></i> Notifications<span class="badge badge-danger float-right m-1">2
-                        </span></h6>
-                        <h6><i class="fas fa-shopping-basket"></i> Panier<span class="badge badge-danger float-right
+                        <h6><i class="fas fa-bell"></i>Notifications<span class="badge  badge-danger
+                         float-right m-1">2</span></h6>
+                        <h6><i class="fas fa-shopping-basket"></i>Panier<span class="badge badge-danger float-right
                          m-1">2</span></h6>
                         <h6><i class="fas fa-user-circle"></i> Profils</h6>
                     </div>
                     <div class="mx-auto" style="width: 50px;">
-                      <div class="text-center4">
-                        <img src="stephanie_tartare.jpg " alt="img" class="image rounded-circle">
-                         <div class="text-center5"><h6>Mon compte</h6></div>
-                      </div>
+                        <div class="text-center4">
+                            <img src="stephanie_tartare.jpg " alt="img" class="image rounded-circle">
+                            <div class="text-center5"><h6>Mon compte</h6></div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="col-sm-10 background-2">
             <div class="row ">
-                <div class="col-sm-12">
+                <div class="col-sm-12 bg-light">
+
                     <form class="form-inline my-2 my-lg-0">
                         <input class="form-control mr-sm-2" type="search" placeholder="Search..." aria-label=
                                 "Search">
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Recherche</button>
+                        <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Recherche</button>
                     </form>
                 </div>
             </div>
-            <div class="row text-center justify-content-center two-blocks  background3">
-                <div class="col-sm-2">
-                    <div class="border border-info">
 
+            <div class="row text-center justify-content-center two-blocks">
+                <div class="col-sm-2 ">
+                    <div class="border border-info">
+                        <div class="h-100 d-inline-block-1"></div>
                         <i class="fas fa-suitcase"></i>
                         <h6>+ AJOUT OBJET</h6>
                     </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                     <div class="border border-info">
+                        <div class="h-100 d-inline-block"></div>
                         <i class="fas fa-user"></i>
                         <h6> + AJOUT PROPRIETAIRE</h6>
                     </div>
@@ -143,7 +148,7 @@
                 <div class="col-sm-2 border border-brown">
                     <h6>STATUT</h6>
                     <h6>
-                        <small class="text-muted">Traduction finalisée</small>
+                        <small class="text-muted"><p class="text-success">Traduction finalisée</p></small>
                     </h6>
 
                     <h6></h6>
@@ -158,7 +163,8 @@
                 <div class="col-sm-2 border border-brown">
                     <h6>ECHEANCE</h6>
                     <h6>
-                        <small class="text-muted">22 avril 2017</small>
+
+                        <small class="text-muted"><p class="text-success">22 Avril 2017</p></small>
                     </h6>
                 </div>
             </div>
@@ -170,7 +176,7 @@
             </div>
 
             <div class="row justify-content-center two-blocks">
-                <div class="col-sm-2 border  border-brown">
+                <div class="col-sm-2 border   border-brown">
                     <h6>TRADUCTION HISTOIRE DE</h6>
                 </div>
                 <div class="col-sm-3 border border-brown">
@@ -180,7 +186,7 @@
                 <div class="col-sm-2 border border-brown">
                     <h6>STATUT</h6>
                     <h6>
-                        <small class="text-muted">Traduction finalisée</small>
+                        <small class="text-muted"><p class="text-success">Traduction finalisée</p></small>
                     </h6>
 
                 </div>
@@ -193,13 +199,13 @@
                 <div class="col-sm-2 border border-brown">
                     <h6>ECHEANCE</h6>
                     <h6>
-                        <small class="text-muted">22 avril 2017</small>
+                        <small class="text-muted"><p class="text-success">22 Avril 2017</p></small>
                     </h6>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
+</div>
 </body>
 </html>
